Removed some deprecated Java features.